# cropautonomy-platform

./: .dockerignore  .gitignore  .mcp.json  CAPTURES_SETUP.md  CLAUDE.md  CLERK_SETUP.md  LICENSE  NOTICE  README.md  package.json  pnpm-lock.yaml
.claude/skills/gaia-design-system/: SKILL.md
.claude/skills/gaia-design-system/references/: components.md  palette.md  portal.md  voice.md
.github/workflows/: deploy.yml
apps/: README.md
apps/cropautonomy-web/: .env.example  DESIGN.md  PRODUCT.md  next.config.mjs  package.json
apps/cropautonomy-web/.impeccable/: design.json
apps/cropautonomy-web/app/: layout.tsx  page.tsx
apps/field-web/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
apps/field-web/src/: App.tsx  env.ts  main.tsx
apps/field-web/src/components/: AccountChip.tsx  ChromeLayout.tsx  FieldDock.tsx  GoLiveGrantWatcher.tsx  Hud.tsx  MissingEnvScreen.tsx  OverlayChrome.tsx  SurfaceSwitcher.tsx
apps/field-web/src/lib/: api.ts  auth.ts  capture-camera.ts  db.ts  geo.ts  hud-signals.ts  ice.ts  liveRequest.ts  session.ts  upload.ts  webrtc.ts
apps/field-web/src/pages/: CapturePage.tsx  MapPage.tsx  PairPage.tsx  QueuePage.tsx  SessionPickerPage.tsx  SettingsPage.tsx
apps/gaiabots-web/: .env.example  DESIGN.md  PRODUCT.md  package.json
apps/gaiabots-web/.impeccable/: design.json
apps/gaiabots-web/app/: globals.css  layout.tsx  page.tsx
apps/portal-web/: .env.example  DESIGN.md  Dockerfile  PRODUCT.md  next.config.mjs  package.json  postcss.config.mjs  proxy.ts
apps/portal-web/.impeccable/: design.json
apps/portal-web/app/: analytics-provider.tsx  globals.css  layout.tsx  missing-env-screen.tsx  realtime-provider.tsx
apps/portal-web/lib/: api.ts  auth.ts  cors.ts  ice.ts  initials.ts  nav-counts.ts  notification-display.ts  plantNameMode.ts  supabase.ts  useLiveViewer.ts
apps/portal-web/types/: tz-lookup.d.ts
cad/: gaia-r.scad  gaia_r_concept_rover.scad  gaia_r_lower_base_v01.scad
deploy/: README.md
deploy/k8s/base/: api-deployment.yaml  cluster-issuer.yaml  configmap.yaml  field-deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  portal-deployment.yaml  service-account.yaml  vision-deployment.yaml  workers-deployment.yaml
docs/: README.md  agent-engineering-guide.md  cropautonomy_codex_handover_master_document.md  dependency-policy.md  product-roadmap.md  project-vision.md
docs/architecture/: api-architecture.md  architecture-overview.md  authentication-and-tenancy.md  capture-analysis-intelligence.md  capture-pipeline.md  data-and-storage-strategy.md  database-schema.md  deployment-strategy.md  monorepo-strategy.md  queueing-email-analytics.md  realtime-package-spec.md  realtime-strategy.md  robotics-and-edge-architecture.md
docs/brand/: brand-and-design-system.md  cropautonomy-brand-brief.md  gaiabots-brand-brief.md
docs/decisions/: 0001-build-for-the-system.md  0002-gke-cotenancy-v0.md  0003-ml-phase2-strategy.md  0004-portal-design-register.md  0005-local-rule-based-plant-analysis.md  README.md
docs/product/: cropautonomy-platform-prd.md  field-capture-prd.md  gaiabots-knowledge-base-prd.md  landing-pages-prd.md
images/: icon.ai
patches/: @clerk__nextjs@6.36.2.patch
services/: Dockerfile  README.md
services/api/: .env.example  README.md  package.json
services/api/src/: config.ts  index.ts  server.ts
services/api/src/lib/: clerk.ts  (+7 more)
services/telemetry/: README.md
services/vision/: .env.example  Dockerfile  README.md  pyproject.toml
services/vision/src/vision/: __init__.py  config.py  main.py  pipeline.py  schemas.py
services/vision/src/vision/providers/: __init__.py  base.py  plantnet.py  registry.py
services/vision/src/vision/stages/: __init__.py  agronomic_summary.py  base.py  plantnet.py  registry.py  rtdetr.py  video_summary.py
services/workers/: .env.example  package.json  tsconfig.json
services/workers/src/: config.ts  index.ts  queues.ts
(+161 files in other folders)
