[project]
name = "gaia-vision"
version = "0.1.0"
description = "CropAutonomy vision/ML inference service. Provider-abstracted: PlantNet today, our own PyTorch models later."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.12",
    # Detection stage (RT-DETR via Hugging Face transformers). Apache 2.0 only;
    # see docs/dependency-policy.md before changing any of these. Heavy install
    # (~1.5GB total with CPU torch wheels) — first run downloads model weights
    # (~110MB) from Hugging Face Hub.
    "torch>=2.4,<3.0",
    "transformers>=4.46,<5.0",
    "pillow>=10.4,<12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
