[project]
name = "gaia-vision"
version = "0.1.0"
description = "CropAutonomy vision/ML inference service. Provider-abstracted: PlantNet today, our own PyTorch models later."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.12",
    # Detection stage (RT-DETR via Hugging Face transformers). Apache 2.0 only;
    # see docs/dependency-policy.md before changing any of these. Heavy install
    # (~1.5GB total with CPU torch wheels) — first run downloads model weights
    # (~110MB) from Hugging Face Hub.
    #
    # torch pinned to 2.10.x: the CacheArtifactFactory precompile-registration
    # assertion is present in BOTH torch 2.11.x and 2.12.0 (asserts at module
    # import time, triggered by transformers' flex_attention integration
    # calling `torch.compiler.disable`). 2.10.0 (released 2026-01-21) is the
    # last known version before the precompile cache infrastructure regressed.
    # No upstream issue filed yet; revisit when a patched 2.12.x or 2.13 ships.
    "torch>=2.10,<2.11",
    "transformers>=4.46,<5.0",
    "pillow>=10.4,<12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
